# workflow-demo

./: CHANGELOG.md  LICENSE  README.md  workflow-demo.cabal
app/: Main.hs
