cabal-version:   3.0
name:            workflow-demo
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          Alex Vzorov
maintainer:      alex.vzorov@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable workflow-demo
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base           ^>=4.16.1.0
    , bytestring
    , lens
    , lens-aeson
    , pretty-simple
    , text
    , yaml

  hs-source-dirs:   app
  default-language: Haskell2010
